# cvxrust

./: .gitignore  .pre-commit-config.yaml  FIRST_RUN_ANALYSIS.md  pyproject.toml  setup.py
.claude/agents/: rust-mentor.md
.github/workflows/: build.yml  test_backends.yml
cvxpy/: settings.py
cvxpy/lin_ops/: canon_backend.py
cvxpy/lin_ops/backends/: rust_backend.py
cvxpy/tests/: test_backend_selection.py  test_expressions.py  test_rust_backend.py
cvxpy_rust/: Cargo.toml  INTERFACE.md  README.md
cvxpy_rust/src/: block.rs  lib.rs  linop.rs  matrix_builder.rs  tensor.rs
cvxpy_rust/src/operations/: arithmetic.rs  leaf.rs  mod.rs  specialized.rs  structural.rs
rust_benchmarks/: BACKEND_PR_DRAFT.md  CODE_CHANGES.md  CVXPY_BENCHMARKS_RESULTS.md  CVXPY_BENCHMARKS_RESULTS_REBASED.md  DIFFENGINE_INSIGHTS.md  FFI_OVERHEAD_ANALYSIS.md  HANDOFF.md  LOSSES_ANALYSIS.md  OPTIMIZATION_1_CODE_PLAN.md  OPTIMIZATION_PLAN.md  ROADMAP.md  ROUND2_CHANGES.md  RUST_BACKEND_PERFORMANCE_ANALYSIS.md  SESSION_NOTES_2026-04-29.md  after_P1P3.json  after_P1P3_coldstart.json  after_P2.json  after_P2_coldstart.json  after_P5_meta_stream.json  asv_matrix_report.py  asv_report.md  asv_report_rebased.md  atoms_4backend_rebased.json  baseline_coldstart.json  baseline_full.json  baseline_quick_small.json  benchmark_report.tex  benchmark_rust_backend.py  benchmark_suite.py  current_coldstart.json  current_run.json  debug_rust_call.py  external_4backend_rebased.jsonl  external_report_rebased.md  gate_bench_cases.py  gen_tex.py  profile.html  quick_benchmark.py  run_one.py  rustybench.py  (+5 more)
(+1 files in other folders)
